# formal

./: .gitignore  README-automaton.md  README.md  practice1_guide.md
automaton/: CMakeLists.txt  build_coverage_report.sh  hw4_n1.cpp  hw4_n2.cpp  main.cpp  minimalize.cpp  test.cpp
automaton/hw4/: n1.txt  n2.txt
automaton/lib/: automaton.h
automaton/practice1/: practice1_variant5.cpp  practice1_variant5.h
automaton/src/: automaton1.txt  automaton2.txt  concatinate_test_ans.txt  loop_test_ans.txt  plus_test_ans.txt
automaton/tests/: .test_min1_ans.txt.swp  CMakeLists.txt  test_min1.txt
automaton/tests/automaton_smoke/: test_determ1.txt  test_determ1_ans.txt  test_utils.h
automaton/tests/practice1/: CMakeLists.txt  operations_test.h  practice_tests.h  tests.cpp  utils.h
